--- a/style.css
+++ b/style.css
@@ -24,37 +24,29 @@ header {
     background-color: var(--bg);
     padding: 1.5rem 0;
     border-bottom: 2px solid var(--accent);
+}  
+nav{
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
     align-items: center;
-    text-align: center;
     flex-wrap: wrap;
-}
+} 
+    
 
 .logo {
     font-size: 2.2rem;
     font-weight: 700;
     color: var(--accent);
-    margin-bottom: 1rem;
     transition: color 0.3s ease;
 }
 
-.logo:hover {
-    color: var(--text);
-}
 
-header h1 {
-    font-size: 1.5rem;
-    margin: 0;
-}
 
 .nav-links {
     list-style: none;
     display: flex;
-    justify-content: center;
-    gap: 1.2rem;
-    margin: 0;
+    gap: 1.5rem;
+    margin: 0 auto;
     padding: 0;
 }
 
@@ -74,9 +66,6 @@ body.dark-mode .nav-links li:hover {
     border-color: var(--text);
 }
 
-.nav-links li:focus-within {
-    outline: none;
-}
 .nav-links a {
     display: block;
     padding: 10px 18px;
@@ -89,22 +78,18 @@ body.dark-mode .nav-links li:hover {
 .nav-links a:hover {
     color: var(--accent);
 }
-button {
-    padding: 0.6rem 1rem;
-    border: 2px solid var(--accent);
-    background-color: transparent;
+.mode-toggle {
+    background: transparent;
     color: var(--text);
     cursor: pointer;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-    font-size: 1.1rem;
-    margin-top: 1rem;
+    border: none;
+    transition: transform 0.2s ease, color 0.3s ease;
+    font-size: 1.5rem;
 }
 
-button:hover {
-    background-color: var(--accent);
-    color: white;
-    transform: scale(1.05);
+.mode-toggle:hover {
+    color: var(--accent);
+    transform: scale(1.1);
 }
 
 main {
