--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header {
 nav{
     display: grid;
     grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto auto;
     align-items: center;
     column-gap: 1rem;
     max-width: 1100px;
@@ -37,7 +38,8 @@ nav{
     
 
 .logo {
-    justify-self: start;
+    grid-row: 1;
+    grid-column: 1;
     font-size: 2.2rem;
     font-weight: 700;
     color: var(--accent);
@@ -46,6 +48,8 @@ nav{
 
 
 .nav-links {
+    grid-row: 2; 
+    grid-column: 1 / 4;
     justify-self: center;
     list-style: none;
     display: flex;
@@ -81,6 +85,8 @@ body.dark-mode .nav-links li:hover {
     color: var(--accent);
 }
 .mode-toggle {
+    grid-row: 1;
+    grid-column: 3;
     justify-self: end;
     background: transparent;
     color: var(--text);
