--- a/style.css
+++ b/style.css
@@ -27,13 +27,14 @@ header {
 }  
 nav{
     display: grid;
-    grid-template-columns: auto 1fr auto;
+    grid-template-columns: 1fr auto 1fr;
     grid-template-rows: auto auto;
     align-items: center;
     column-gap: 1rem;
     max-width: 1100px;
     margin: 0 auto;
     padding: 0.6rem 1.5rem;
+    width: 100%
 } 
     
 
@@ -92,18 +93,27 @@ body.dark-mode .nav-links li:hover {
     grid-row: 1;
     grid-column: 3;
     justify-self: end;
-    background: transparent;
+    background-color: #000;
+    border: 2px solid var(--accent);
+    border-radius: 8px;
     color: var(--text);
     cursor: pointer;
     border: none;
-    transition: transform 0.2s ease, color 0.3s ease;
-    font-size: 1.5rem;
-    padding: 6px;
+    transition: all 0.3s ease;
+    font-size: 1.4rem;
+    padding: 8px 12px;
 }
 
 .mode-toggle:hover {
-    color: var(--accent);
-    transform: scale(1.08);
+    background-color: var(--accent);
+    transform: scale(1.05);
+    color: #fff;
+}
+
+body.dark-mode .mode-toggle {
+    background-color: #111;
+    border-color: #1e90ff;
+    color: var(--text);
 }
 /*Tablet (medium screens) */
 @media (max-width: 1024px) {
