--- a/style.css
+++ b/style.css
@@ -27,14 +27,14 @@ header {
 }  
 nav{
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: auto 1fr auto;
     grid-template-rows: auto auto;
     align-items: center;
     column-gap: 1rem;
     max-width: 1100px;
     margin: 0 auto;
     padding: 0.6rem 1.5rem;
-    width: 100%
+    width: 100%;
 } 
     
 
@@ -98,7 +98,6 @@ body.dark-mode .nav-links li:hover {
     border-radius: 8px;
     color: var(--text);
     cursor: pointer;
-    border: none;
     transition: all 0.3s ease;
     font-size: 1.4rem;
     padding: 8px 12px;
